--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,144 @@
 *
 {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato' , sans-serif;
+
 }
+body
+ {
+    background-color: black;
+
+}
+.nav-bar 
+{
+    color: white;
+    border-bottom: 2px solid gray;
+    height: 100%;
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-logo 
+{
+    font-size: 30px;
+    padding: 0 30px;
+
+}
+.nav-bar ul 
+{
+    list-style: none;
+    height: inherit;
+    line-height: 80px;
+    padding: 0 50px;
+
+}
+.nav-bar ul li {
+    display: inline-flex;
+    justify-content: space-around;
+    position: relative;
+
+
+}
+.nav-bar ul li a 
+{
+    text-decoration: none;
+    padding: 0 30px;
+    color: white;
+    font-weight: bold;
+    width: 110px;
+     
+}
+.nav-bar ul li a::after
+{
+    content: '';
+    width: 0%;
+    height: 5px;
+    background: white;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 1s;
+    
+}
+.nav-bar ul li a:hover::after
+{
+    width: 80%;
+
+}
+main 
+{
+    color: white;
+    height: 100vh;
+
+}
+.content
+{
+    margin-top: 10%;
+    margin-left: 100px;
+    width: 40%;
+    float: left;
+}
+h1
+{
+    font-size: 50px;
+}
+span
+{
+    color: orangered;
+}
+p
+{
+    margin-top: 10px;
+}
+.btns 
+{
+    margin-top: 20px;
+    background: white;
+    cursor: pointer;
+    color: #191919;
+    padding: 12px 12px;
+    border: none;
+    border-radius: 20px;
+    margin-right: 20px;
+    font-weight: bold;
+
+
+}
+.btns2
+{
+    margin-top: 20px;
+    background: orangered;
+    cursor: pointer;
+    color: #191919;
+    padding: 12px 12px;
+    border: none;
+    border-radius: 20px;
+    margin-right: 20px;
+    font-weight: bold;
+   
+}
+.btns:hover , .btns2:hover
+{
+    filter: invert(0.2)
+}
+main img 
+{
+    width: 30%;
+    float: right;
+    margin-left: 100px;
+    margin-top: 50px;
+    filter: grayscale(1);
+    transition: filter 2s;
+
+}
+main img:hover
+{
+    filter: grayscale(0);
+}
+
+
+
